--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.1.2",
   "description": "Operating System Profile for LB Mesh",
   "main": "lib/index.js",
+  "engines": {
+    "node":">=8"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -13,6 +16,7 @@
   "keywords": [
     "lbmesh.io",
     "loopback",
+    "lbmesh",
     "os",
     "operating system",
     "workstation",
